tests/snapshots/cli_switch__a_foreign_destination_declines_the_whole_switch.snap
---
source: tests/cli_switch.rs
expression: undate(&r.stdout)
---
switch: to profile `new`

observed:
  owned link     <HOME>/.config/hypr
  foreign link   <HOME>/.config/foot
  absent         <HOME>/.config/btop

declined. nothing has been changed.

  [R4] <HOME>/.config/foot: is a foreign link, which ricepilot did not create. It cannot know what depends on it, so it will not replace it. Register it with `ricepilot adopt` or move it aside yourself.
