tests/snapshots/cli_switch__commit_switches_every_destination_and_records_the_generation.snap
---
source: tests/cli_switch.rs
expression: undate(&r.stdout)
---
switch: to profile `new`

observed:
  owned link     <HOME>/.config/hypr
  owned link     <HOME>/.config/foot
  absent         <HOME>/.config/btop

applying 9 operation(s):
  stage link   <HOME>/.config/hypr.rp-tmp-0 -> <HOME>/rice/new/hypr
  stage link   <HOME>/.config/foot.rp-tmp-1 -> <HOME>/rice/new/foot
  exchange     <HOME>/.config/hypr <-> <HOME>/.config/hypr.rp-tmp-0
  exchange     <HOME>/.config/foot <-> <HOME>/.config/foot.rp-tmp-1
  create link  <HOME>/.config/btop -> <HOME>/rice/new/btop
  to attic     <HOME>/.config/hypr.rp-tmp-0 -> <attic><HOME>/.config/hypr
  to attic     <HOME>/.config/foot.rp-tmp-1 -> <attic><HOME>/.config/foot
  fsync dir    <HOME>/.config
  fsync dir    <HOME>/.local/state/ricepilot/attic/<TS>

applied. this is generation 0001.

displaced links are in:
  <HOME>/.local/state/ricepilot/attic/<TS>
nothing was removed.

a blake3 manifest of the profile was recorded at:
  <HOME>/.local/state/ricepilot/manifests/new.toml
`ricepilot verify` compares against it.

to undo this:
  ricepilot rollback --commit            re-applies generation 0000
  sh <HOME>/.local/state/ricepilot/rescue.sh   the same thing, from a TTY, without ricepilot

this changed the filesystem, not the running session. log out and back in to see it:
  uwsm stop

never `hyprctl dispatch exit` and never kill Hyprland — `uwsm stop` is the clean
logout. if the session does not come back, TTY F2–F6 and run the rescue script above.
