tests/snapshots/cli_switch__switching_to_the_profile_already_live_does_nothing.snap
---
source: tests/cli_switch.rs
expression: undate(&r.stdout)
---
switch: to profile `new`

observed:
  owned link     <HOME>/.config/hypr
  owned link     <HOME>/.config/foot
  owned link     <HOME>/.config/btop

nothing to do: every destination already matches.
